--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         Serviços
       </h3>
       <ul>
-        <li class="item">Carta de vinhos orgânicos</li>
+        <li class="item">Carta de vinhos orgânicos.</li>
         <li class="item">Pratos personalizados por mesa</li>
         <li class="item">Alta tecnologia em todos os ambientes</li>
         <li class="item">Espaço família em ambiente reservado</li>
